// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`success create member 1`] = `
"<h4 class=\\"page-header\\"> Members
  <!--header-->
</h4>
<div class=\\"page-body\\">
  <div class=\\"members-page\\">
    <!--if-->
    <!--ErrorsPanel-->
    <div class=\\"container\\">
      <button data-test-toggle-create-form=\\"\\" class=\\"mg-b-30\\">Hide create new member form</button>
      <div class=\\"panel mg-b-30 create-member\\">
        <form class=\\"form-layout\\">
          <!--header-->
          <!--if-->
          <!--ErrorsPanel-->
          <div class=\\"form-group\\">
            <label>Name:</label>
            <input name=\\"name\\" type=\\"text\\" autofocus=\\"\\">
          </div>
          <div class=\\"form-group\\">
            <label>Email:</label>
            <input name=\\"email\\" type=\\"text\\">
          </div>
          <div class=\\"form-group\\">
            <label></label>
            <label class=\\"checkbox\\">
              <input name=\\"is_superuser\\" type=\\"checkbox\\" value=\\"false\\"><span>Is Superuser</span></label>
          </div>
          <div class=\\"form-group\\">
            <label>Password:</label>
            <input name=\\"pass\\" type=\\"password\\">
          </div>
          <!--default-->
          <!--default-->
          <button type=\\"submit\\">
            <!--if-->Create
            <!--submit-->
          </button>
          <!--footer-->
        </form>
        <!--FormContainer-->
        <!--if-->
        <!--FormWithConfirmModal-->
      </div>
      <!--if-->
    </div>
    <div class=\\"container\\">
      <div class=\\"members-list\\">
        <div class=\\"panel\\">
          <div class=\\"pagination\\">
            <div class=\\"page-buttons\\">
              <!--if-->
              <button data-test-pagination-page=\\"1\\" disabled=\\"\\">1</button>
              <!--if-->
            </div>
            <!--PaginationPages-->
            <table>
              <thead>
                <tr>
                  <th>ID</th>
                  <th>Name</th>
                  <th>Email</th>
                  <th>Is superuser?</th>
                  <th></th>
                </tr>
              </thead>
              <tbody></tbody>
            </table>
            <!--if-->
            <!--MembersTable-->
            <!--default-->
            <!--if-->
            <div class=\\"page-buttons\\">
              <!--if-->
              <button data-test-pagination-page=\\"1\\" disabled=\\"\\">1</button>
              <!--if-->
            </div>
            <!--PaginationPages-->
          </div>
        </div>
      </div>
      <!--if-->
    </div>
  </div>
  <!--body-->
</div>
<!--if-->
<!--Page-->
<!--ActivePageContainer-->"
`;

exports[`success create member 2`] = `
"<h4 class=\\"page-header\\"> Members
  <!--header-->
</h4>
<div class=\\"page-body\\">
  <div class=\\"members-page\\">
    <!--if-->
    <!--ErrorsPanel-->
    <div class=\\"container\\">
      <button data-test-toggle-create-form=\\"\\" class=\\"mg-b-30\\">Show create new member form</button>
      <!--if-->
    </div>
    <div class=\\"container\\">
      <div class=\\"members-list\\">
        <div class=\\"panel\\">
          <div class=\\"pagination\\">
            <div class=\\"page-buttons\\">
              <!--if-->
              <button data-test-pagination-page=\\"1\\" disabled=\\"\\">1</button>
              <!--if-->
            </div>
            <!--PaginationPages-->
            <table>
              <thead>
                <tr>
                  <th>ID</th>
                  <th>Name</th>
                  <th>Email</th>
                  <th>Is superuser?</th>
                  <th></th>
                </tr>
              </thead>
              <tbody>
                <tr class=\\"\\">
                  <td>1</td>
                  <td>John Smith</td>
                  <td>john.smith@test.com</td>
                  <td class=\\"text-center\\">No</td>
                  <td class=\\"actions\\">
                    <button data-test-update-button=\\"1\\"> Edit </button>
                    <button class=\\"btn-danger\\" data-test-delete-button=\\"1\\"> Delete </button>
                  </td>
                </tr>
              </tbody>
            </table>
            <!--if-->
            <!--MembersTable-->
            <!--default-->
            <!--if-->
            <div class=\\"page-buttons\\">
              <!--if-->
              <button data-test-pagination-page=\\"1\\" disabled=\\"\\">1</button>
              <!--if-->
            </div>
            <!--PaginationPages-->
          </div>
        </div>
      </div>
      <!--if-->
    </div>
  </div>
  <!--body-->
</div>
<!--if-->
<!--Page-->
<!--ActivePageContainer-->"
`;

exports[`success create superuser member 1`] = `
"<h4 class=\\"page-header\\"> Members
  <!--header-->
</h4>
<div class=\\"page-body\\">
  <div class=\\"members-page\\">
    <!--if-->
    <!--ErrorsPanel-->
    <div class=\\"container\\">
      <button data-test-toggle-create-form=\\"\\" class=\\"mg-b-30\\">Hide create new member form</button>
      <div class=\\"panel mg-b-30 create-member\\">
        <form class=\\"form-layout\\">
          <!--header-->
          <!--if-->
          <!--ErrorsPanel-->
          <div class=\\"form-group\\">
            <label>Name:</label>
            <input name=\\"name\\" type=\\"text\\" autofocus=\\"\\">
          </div>
          <div class=\\"form-group\\">
            <label>Email:</label>
            <input name=\\"email\\" type=\\"text\\">
          </div>
          <div class=\\"form-group\\">
            <label></label>
            <label class=\\"checkbox\\">
              <input name=\\"is_superuser\\" type=\\"checkbox\\" value=\\"false\\"><span>Is Superuser</span></label>
          </div>
          <div class=\\"form-group\\">
            <label>Password:</label>
            <input name=\\"pass\\" type=\\"password\\">
          </div>
          <!--default-->
          <!--default-->
          <button type=\\"submit\\">
            <!--if-->Create
            <!--submit-->
          </button>
          <!--footer-->
        </form>
        <!--FormContainer-->
        <!--if-->
        <!--FormWithConfirmModal-->
      </div>
      <!--if-->
    </div>
    <div class=\\"container\\">
      <div class=\\"members-list\\">
        <div class=\\"panel\\">
          <div class=\\"pagination\\">
            <div class=\\"page-buttons\\">
              <!--if-->
              <button data-test-pagination-page=\\"1\\" disabled=\\"\\">1</button>
              <!--if-->
            </div>
            <!--PaginationPages-->
            <table>
              <thead>
                <tr>
                  <th>ID</th>
                  <th>Name</th>
                  <th>Email</th>
                  <th>Is superuser?</th>
                  <th></th>
                </tr>
              </thead>
              <tbody></tbody>
            </table>
            <!--if-->
            <!--MembersTable-->
            <!--default-->
            <!--if-->
            <div class=\\"page-buttons\\">
              <!--if-->
              <button data-test-pagination-page=\\"1\\" disabled=\\"\\">1</button>
              <!--if-->
            </div>
            <!--PaginationPages-->
          </div>
        </div>
      </div>
      <!--if-->
    </div>
  </div>
  <!--body-->
</div>
<!--if-->
<!--Page-->
<!--ActivePageContainer-->"
`;

exports[`success create superuser member 2`] = `
"<h4 class=\\"page-header\\"> Members
  <!--header-->
</h4>
<div class=\\"page-body\\">
  <div class=\\"members-page\\">
    <!--if-->
    <!--ErrorsPanel-->
    <div class=\\"container\\">
      <button data-test-toggle-create-form=\\"\\" class=\\"mg-b-30\\">Show create new member form</button>
      <!--if-->
    </div>
    <div class=\\"container\\">
      <div class=\\"members-list\\">
        <div class=\\"panel\\">
          <div class=\\"pagination\\">
            <div class=\\"page-buttons\\">
              <!--if-->
              <button data-test-pagination-page=\\"1\\" disabled=\\"\\">1</button>
              <!--if-->
            </div>
            <!--PaginationPages-->
            <table>
              <thead>
                <tr>
                  <th>ID</th>
                  <th>Name</th>
                  <th>Email</th>
                  <th>Is superuser?</th>
                  <th></th>
                </tr>
              </thead>
              <tbody>
                <tr class=\\"\\">
                  <td>1</td>
                  <td>John Smith</td>
                  <td>john.smith@test.com</td>
                  <td class=\\"text-center\\">Yes</td>
                  <td class=\\"actions\\">
                    <button data-test-update-button=\\"1\\"> Edit </button>
                    <button class=\\"btn-danger\\" data-test-delete-button=\\"1\\"> Delete </button>
                  </td>
                </tr>
              </tbody>
            </table>
            <!--if-->
            <!--MembersTable-->
            <!--default-->
            <!--if-->
            <div class=\\"page-buttons\\">
              <!--if-->
              <button data-test-pagination-page=\\"1\\" disabled=\\"\\">1</button>
              <!--if-->
            </div>
            <!--PaginationPages-->
          </div>
        </div>
      </div>
      <!--if-->
    </div>
  </div>
  <!--body-->
</div>
<!--if-->
<!--Page-->
<!--ActivePageContainer-->"
`;
